Add ref to github

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,6 +4,8 @@
 
   <h1>@message</h1>
 
+  <p>Code <a href='https://github.com/donbonifacio/scala-playground'>here</a>.</p>
+
   <ul>
     <li><a href='/simple_async'>Simple Async</a></li>
     <li><a href='/invoices/123'>Static Invoice API</a></li>
